// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SNAPSHOT][Componentes][Common][AdvancedSelect] - Lista desplegable (avanzada). Debe pintar el componente con los siguientes modificadores: (Deshabilitado: cierto)(ID: numérico). 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 25px;
  margin: 0px;
  vertical-align: top;
  width: 25px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0 {
  box-sizing: border-box;
  display: inline-block;
  height: 60px;
  margin: 0px;
  min-width: 250px;
  padding: 0px;
  position: relative;
  width: auto;
}

.c12 {
  border-top: 0px solid transparent;
  border-left: 0px solid transparent;
  border-right: 0px solid transparent;
  border-bottom: 1px solid #BFBFBF;
  color: #BFBFBF;
  height: 45px;
  font-family: "Open Sans",sans-serif;
  font-size: 11px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  left: 0px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0px;
  padding: 0px;
  position: absolute;
  text-align: left;
  top: 0px;
  width: 100%;
  white-space: nowrap;
  z-index: 1;
  -webkit-transition: color 0.3s ease-in-out,font 0.1s linear,padding 0.1s linear;
  transition: color 0.3s ease-in-out,font 0.1s linear,padding 0.1s linear;
}

.c12:after {
  background: #1476FB;
  bottom: -1px;
  content: '';
  height: 1px;
  left: 50%;
  position: absolute;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  width: 0px;
}

.c13:focus ~ .c11 {
  color: #1476FB;
}

.c13:focus ~ .c11:after {
  left: 0px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  border: none;
  border-radius: 0px;
  color: #BFBFBF;
  cursor: default;
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  font-weight: normal;
  height: 30px;
  left: 0px;
  overflow: hidden;
  padding: 0px 25px 0px 0px;
  position: absolute;
  top: 15px;
  text-align: left;
  text-indent: 1px;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
  z-index: 2;
}

.c1:focus {
  color: #000;
  outline: none;
}

.c1:focus ~ .c11 {
  color: #1476FB;
}

.c1:focus ~ .c11:after {
  left: 0px;
  width: 100%;
}

.c2 {
  cursor: default;
  fill: #BFBFBF;
  pointer-events: none;
  position: absolute;
  right: 0px;
  top: 3px;
  z-index: 3;
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
}

.c4 {
  background-clip: padding-box;
  background-color: #FFF;
  border: 1px solid #BFBFBF;
  border-radius: 4px;
  box-shadow: 0px 0px 14px 1px rgba(0,0,0,0.1);
  display: none;
  float: left;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: normal;
  left: 0;
  list-style: none;
  margin: 1px 0px 0px 0px;
  max-height: 150px;
  min-width: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  padding: 0px;
  position: absolute;
  text-align: left;
  top: 45px;
  z-index: 4;
}

.c4::-webkit-scrollbar {
  width: 10px;
}

.c4::-webkit-scrollbar-track {
  background-color: #E5E5E5;
  border-radius: 5px;
}

.c4::-webkit-scrollbar-thumb {
  border-radius: 5px;
  background: rgba(20,118,251,0.8);
}

.c4::-webkit-scrollbar-thumb:hover {
  background: rgba(20,118,251,1);
}

.c4::-webkit-scrollbar-thumb:window-inactive {
  background: rgba(20,118,251,0.4);
}

.c10 {
  background-color: #FFF;
  cursor: pointer;
  height: 30px;
  margin: 0px;
  overflow: hidden;
  padding: 0px;
  pointer-events: all;
}

.c10:hover {
  background-color: #1476FB;
}

.c6 {
  background-color: #FFF;
  cursor: pointer;
  height: 30px;
  margin: 0px;
  overflow: hidden;
  padding: 0px;
  pointer-events: none;
}

.c6:hover {
  background-color: #1476FB;
}

.c8 {
  background-color: #A1C8FD;
  cursor: pointer;
  height: 30px;
  margin: 0px;
  overflow: hidden;
  padding: 0px;
  pointer-events: none;
}

.c8:hover {
  background-color: #1476FB;
}

.c9 {
  box-sizing: border-box;
  color: #242424;
  cursor: pointer;
  float: left;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  height: 20px;
  pointer-events: all;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: calc(100% - 40px);
}

.c9:disabled {
  color: #BFBFBF;
}

.c5:hover .c9 {
  color: #FFF;
}

.c7 {
  box-sizing: border-box;
  color: #BFBFBF;
  cursor: pointer;
  float: left;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  height: 20px;
  pointer-events: none;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: calc(100% - 40px);
}

.c7:disabled {
  color: #BFBFBF;
}

.c5:hover .c7 {
  color: #FFF;
}

.c5:hover .c14 {
  color: #FFF;
}

.c5:hover .c15 {
  color: #FFF;
}

.c5:hover .c16 {
  fill: #FFF;
}

.c5:hover .c17 {
  fill: #FFF;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={true}
    onClick={[Function]}
  >
    Opción #1
    <svg
      alt="solidAngleDown"
      className="c2 c3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path d=\\"M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z\\"/>",
        }
      }
      disabled={true}
      height="25px"
      id="svg-show-list-icon"
      viewBox="0 0 320 512"
      width="25px"
      x="0px"
      y="0px"
    />
  </button>
  <ul
    className="c4"
  >
    <li
      className="c5 c6"
      disabled={true}
      onClick={[Function]}
      selected={false}
    >
      <label
        className="c7"
        disabled={true}
        selected={false}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Seleccione una opción
      </label>
    </li>
    <li
      className="c5 c8"
      disabled={false}
      onClick={[Function]}
      selected={true}
    >
      <label
        className="c9"
        disabled={false}
        selected={true}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Opción #1
      </label>
    </li>
    <li
      className="c5 c10"
      disabled={false}
      onClick={[Function]}
      selected={false}
    >
      <label
        className="c9"
        disabled={false}
        selected={false}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Opción #2
      </label>
    </li>
    <li
      className="c5 c10"
      disabled={false}
      onClick={[Function]}
      selected={false}
    >
      <label
        className="c9"
        disabled={false}
        selected={false}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Opción #3
      </label>
    </li>
    <li
      className="c5 c10"
      disabled={false}
      onClick={[Function]}
      selected={false}
    >
      <label
        className="c9"
        disabled={false}
        selected={false}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Opción #4
      </label>
    </li>
    <li
      className="c5 c10"
      disabled={false}
      onClick={[Function]}
      selected={false}
    >
      <label
        className="c9"
        disabled={false}
        selected={false}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Opción #5
      </label>
    </li>
  </ul>
  <label
    className="c11 c12"
  >
    Estado: normal
  </label>
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][AdvancedSelect] - Lista desplegable (avanzada). Debe pintar el componente con los siguientes modificadores: (Deshabilitado: falso)(ID: numérico). 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 25px;
  margin: 0px;
  vertical-align: top;
  width: 25px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0 {
  box-sizing: border-box;
  display: inline-block;
  height: 60px;
  margin: 0px;
  min-width: 250px;
  padding: 0px;
  position: relative;
  width: auto;
}

.c12 {
  border-top: 0px solid transparent;
  border-left: 0px solid transparent;
  border-right: 0px solid transparent;
  border-bottom: 1px solid #BFBFBF;
  color: #242424;
  height: 45px;
  font-family: "Open Sans",sans-serif;
  font-size: 11px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  left: 0px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 0px;
  padding: 0px;
  position: absolute;
  text-align: left;
  top: 0px;
  width: 100%;
  white-space: nowrap;
  z-index: 1;
  -webkit-transition: color 0.3s ease-in-out,font 0.1s linear,padding 0.1s linear;
  transition: color 0.3s ease-in-out,font 0.1s linear,padding 0.1s linear;
}

.c12:after {
  background: #1476FB;
  bottom: -1px;
  content: '';
  height: 1px;
  left: 50%;
  position: absolute;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  width: 0px;
}

.c1 {
  background-color: transparent;
  border: none;
  border-radius: 0px;
  color: #A7A7A7;
  cursor: pointer;
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  font-weight: normal;
  height: 30px;
  left: 0px;
  overflow: hidden;
  padding: 0px 25px 0px 0px;
  position: absolute;
  top: 15px;
  text-align: left;
  text-indent: 1px;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
  z-index: 2;
}

.c1:focus {
  color: #000;
  outline: none;
}

.c1:focus ~ .c11 {
  color: #1476FB;
}

.c1:focus ~ .c11:after {
  left: 0px;
  width: 100%;
}

.c2 {
  cursor: pointer;
  fill: #A7A7A7;
  pointer-events: all;
  position: absolute;
  right: 0px;
  top: 3px;
  z-index: 3;
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
}

.c4 {
  background-clip: padding-box;
  background-color: #FFF;
  border: 1px solid #BFBFBF;
  border-radius: 4px;
  box-shadow: 0px 0px 14px 1px rgba(0,0,0,0.1);
  display: none;
  float: left;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: normal;
  left: 0;
  list-style: none;
  margin: 1px 0px 0px 0px;
  max-height: 150px;
  min-width: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  padding: 0px;
  position: absolute;
  text-align: left;
  top: 45px;
  z-index: 4;
}

.c4::-webkit-scrollbar {
  width: 10px;
}

.c4::-webkit-scrollbar-track {
  background-color: #E5E5E5;
  border-radius: 5px;
}

.c4::-webkit-scrollbar-thumb {
  border-radius: 5px;
  background: rgba(20,118,251,0.8);
}

.c4::-webkit-scrollbar-thumb:hover {
  background: rgba(20,118,251,1);
}

.c4::-webkit-scrollbar-thumb:window-inactive {
  background: rgba(20,118,251,0.4);
}

.c6 {
  background-color: #FFF;
  cursor: pointer;
  height: 30px;
  margin: 0px;
  overflow: hidden;
  padding: 0px;
  pointer-events: all;
}

.c6:hover {
  background-color: #1476FB;
}

.c9 {
  background-color: #FFF;
  cursor: pointer;
  height: 30px;
  margin: 0px;
  overflow: hidden;
  padding: 0px;
  pointer-events: none;
}

.c9:hover {
  background-color: #1476FB;
}

.c8 {
  background-color: #A1C8FD;
  cursor: pointer;
  height: 30px;
  margin: 0px;
  overflow: hidden;
  padding: 0px;
  pointer-events: none;
}

.c8:hover {
  background-color: #1476FB;
}

.c7 {
  box-sizing: border-box;
  color: #242424;
  cursor: pointer;
  float: left;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  height: 20px;
  pointer-events: all;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: calc(100% - 40px);
}

.c7:disabled {
  color: #BFBFBF;
}

.c5:hover .c7 {
  color: #FFF;
}

.c10 {
  box-sizing: border-box;
  color: #BFBFBF;
  cursor: pointer;
  float: left;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  height: 20px;
  pointer-events: none;
  text-align: left;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: calc(100% - 40px);
}

.c10:disabled {
  color: #BFBFBF;
}

.c5:hover .c10 {
  color: #FFF;
}

.c5:hover .c13 {
  color: #FFF;
}

.c5:hover .c14 {
  color: #FFF;
}

.c5:hover .c15 {
  fill: #FFF;
}

.c5:hover .c16 {
  fill: #FFF;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    Opción #1
    <svg
      alt="solidAngleDown"
      className="c2 c3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path d=\\"M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z\\"/>",
        }
      }
      disabled={false}
      height="25px"
      id="svg-show-list-icon"
      viewBox="0 0 320 512"
      width="25px"
      x="0px"
      y="0px"
    />
  </button>
  <ul
    className="c4"
  >
    <li
      className="c5 c6"
      disabled={false}
      onClick={[Function]}
      selected={false}
    >
      <label
        className="c7"
        disabled={false}
        selected={false}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Seleccione una opción
      </label>
    </li>
    <li
      className="c5 c8"
      disabled={false}
      onClick={[Function]}
      selected={true}
    >
      <label
        className="c7"
        disabled={false}
        selected={true}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Opción #1
      </label>
    </li>
    <li
      className="c5 c6"
      disabled={false}
      onClick={[Function]}
      selected={false}
    >
      <label
        className="c7"
        disabled={false}
        selected={false}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Opción #2
      </label>
    </li>
    <li
      className="c5 c6"
      disabled={false}
      onClick={[Function]}
      selected={false}
    >
      <label
        className="c7"
        disabled={false}
        selected={false}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Opción #3
      </label>
    </li>
    <li
      className="c5 c9"
      disabled={true}
      onClick={[Function]}
      selected={false}
    >
      <label
        className="c10"
        disabled={true}
        selected={false}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Opción #4
      </label>
    </li>
    <li
      className="c5 c6"
      disabled={false}
      onClick={[Function]}
      selected={false}
    >
      <label
        className="c7"
        disabled={false}
        selected={false}
        style={
          Object {
            "height": "30px",
            "padding": "5px",
            "width": "100%",
          }
        }
      >
        Opción #5
      </label>
    </li>
  </ul>
  <label
    className="c11 c12"
  >
    Estado: normal
  </label>
</div>
`;
